// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a market is created a second LP deposits a trader opens a long position the trader closes half their position trader amountOut set correctly 1`] = `46.11469263897196`;

exports[`a market is created a second LP deposits a trader opens a long position the trader closes half their position trader long balance is updated correctly 1`] = `
Object {
  "long": 91.11350587167246,
  "short": 0,
}
`;

exports[`a market is created a second LP deposits a trader opens a long position the trader closes half their position trader net profit is updated correctly 1`] = `
Object {
  "amount": -6.674657608466674,
  "percent": -0.06674657608466675,
}
`;

exports[`a market is created a second LP deposits a trader opens a long position the trader closes half their position trader net worth is updated correctly 1`] = `47.210649752561366`;

exports[`a market is created a second LP deposits a trader opens a long position the trader closes half their position trader stable balance is updated correctly 1`] = `46.11469263897196`;

exports[`a market is created a second LP deposits a trader opens a long position the trader closes half their position trader stable withdrawal is recorded correctly 1`] = `46.11469263897196`;

exports[`a market is created a second LP deposits a trader opens a long position trader long balance is updated correctly 1`] = `
Object {
  "long": 182.22701174334492,
  "short": 0,
}
`;

exports[`a market is created a second LP deposits a trader opens a long position trader net profit is set correctly 1`] = `
Object {
  "amount": -2.512443379344674,
  "percent": -0.02512443379344674,
}
`;

exports[`a market is created a second LP deposits a trader opens a long position trader net worth is set correctly 1`] = `97.48755662065533`;

exports[`a market is created a second LP deposits a trader opens a short position a third LP makes a deposit at bottom of range third LP net worth should be calculated correctly 1`] = `199.347848471234`;

exports[`a market is created a second LP deposits a trader opens a short position a third LP makes a deposit at bottom of range trader trades price to top of the range third LP net worth should be calculated correctly 1`] = `170.45660184020414`;

exports[`a market is created a second LP deposits a trader opens a short position trader long balance is updated correctly 1`] = `
Object {
  "long": 0,
  "short": 478.63959455277376,
}
`;

exports[`a market is created a second LP deposits a trader opens a short position trader net profit is set correctly 1`] = `
Object {
  "amount": -17.040344099471668,
  "percent": -0.05680114699823889,
}
`;

exports[`a market is created a second LP deposits a trader opens a short position trader net worth is set correctly 1`] = `282.95965590052833`;

exports[`a market is created a second LP deposits convertedStableDeposit is updated correctly 1`] = `541.3136068524931`;

exports[`a market is created convertedStableDeposit is initialized correctly 1`] = `356.2164306640625`;

exports[`a market is created creator net worth set correctly 1`] = `990.4515486605293`;

exports[`a market is created long pool is initialized with correct balances 1`] = `
Object {
  "market": 356.2164306640625,
  "stable": 316.5177091247838,
}
`;

exports[`a market is created short pool is initialized with correct balances 1`] = `
Object {
  "market": 356.2164306640625,
  "stable": 316.5177091247837,
}
`;
